--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@ __pycache__/
 *.py[codz]
 *$py.class
 
+
+### dataset related
+annotations.tar.gz
+images.tar.gz
+images
+annotations
+
+
 # C extensions
 *.so
 
